# LatticeQuantizers

./: .gitignore  .pre-commit-config.yaml  LLL_algo.py  PCG32random.py  README.md  check_nsm.py  draw_figs.py  pyproject.toml  sgd.py
.github/workflows/: pip.yml  style.yml
algorithm/: closest_lattice_point.py
data/result_batch[1]_scheduler[default]/: quantizer_10_medium_nsm[0.07068]_var[1.890e-09]_2025-01-07_19:29:01.txt  quantizer_11_medium_nsm[0.07026]_var[1.663e-09]_2025-01-07_19:29:47.txt  quantizer_12_medium_nsm[0.06993]_var[1.463e-09]_2025-01-07_19:30:32.txt  quantizer_13_medium_nsm[0.06956]_var[1.311e-09]_2025-01-07_19:31:27.txt  quantizer_14_medium_nsm[0.06914]_var[1.157e-09]_2025-01-07_19:32:38.txt  quantizer_15_medium_nsm[0.06899]_var[1.082e-09]_2025-01-07_19:34:16.txt  quantizer_16_medium_nsm[0.06818]_var[9.248e-10]_2025-01-07_19:37:28.txt  quantizer_17_medium_nsm[0.06833]_var[9.001e-10]_2025-01-07_19:41:14.txt  quantizer_18_medium_nsm[0.06797]_var[8.205e-10]_2025-01-07_19:46:53.txt  quantizer_19_medium_nsm[0.06768]_var[7.532e-10]_2025-01-07_19:53:49.txt  quantizer_20_medium_nsm[0.06744]_var[6.913e-10]_2025-01-07_20:03:11.txt  (+12 more)
data_compare/: quantizer_12_medium_v[1000]_T[1000000]_b[1]_nsm[0.0705]_var[1.597e-09]_2025-01-08_21:44:40.txt  quantizer_12_medium_v[1000]_T[1000000]_b[8]_nsm[0.07033]_var[1.573e-09]_2025-01-08_21:44:13.txt
examples/: cosine.yml  fast.yml  medium.yml  plot_lr_scheduler.ipynb  slow.yml
lattice_quantizer/: lr_scheduler.py
result/: B_2.txt  B_5.txt
tests/: Baseline_Lattice.py  NSM_loss.py  NSM_loss_GPU.py
(+206 files in other folders)
