[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lattice_quantizer"
version = "0.0.1"
dependencies = [
    "numpy",
    "numba",
    "tqdm",
    "scipy",
    "tensorboardX",
    "jsonargparse[signatures]",
]
requires-python = ">=3.8"

[project.optional-dependencies]
test = ["pytest"]
plt = ["matplotlib", "pandas"]

[tool.ruff.lint]
extend-select = [
    "B",   # flake8-bugbear
    "I",   # isort
    "ARG", # flake8-unused-arguments
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL",  # pylint
    "PT",  # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "EXE", # flake8-executable
    "NPY", # NumPy specific rules
    "PD",  # pandas-vet
]
ignore = [
    "PLR09",   # Too many X
    "PLR2004", # Magic comparison
    "EM101",   # Exception message
    "E741",    # Ambiguous variable name
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
